--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <link href="https://fonts.googleapis.com/css2?family=Quicksand&family=Ysabeau+SC:wght@200&display=swap" rel="stylesheet">
 </head>
 
-<h1 onclick="if (count < 6){myTimer = setInterval(start, 1000)} else{clearInterval(myTimer)}" id="header">click on this if you are ready</h1>
+<h1 onclick="myTimer = setInterval(start, 1000);" id="header">click on this if you are ready</h1>
 <body id="body">
 <br>
-<div onClick="clearInterval(tester)"> 
+<div onclick="click1()"> 
 <span class="dot" id ="left"></span>
 <span class="dot" id="mid"></span>
 <span class="dot" id="mid1"></span>
