--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Quicksand&family=Ysabeau+SC:wght@200&display=swap" rel="stylesheet">
 </head>
 
-<h1 onclick="myTimer = setInterval(start, 1000);" id="header">click on this if you are ready</h1>
-<body id="body">
+<h1 onclick="myTimer = setInterval(start, 1000);" style="background-color:lightgray; padding: 10px; border-radius:7px;" id="header">Start</h1>
+<body id="body" onclick="click1()">
 <br>
 <div onclick="click1()"> 
 <span class="dot" id ="left"></span>
