--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Quicksand&family=Ysabeau+SC:wght@200&display=swap" rel="stylesheet">
 </head>
 
-<h1 onclick="myTimer = setInterval(start, 1000);" style="background-color:lightgray; padding: 10px; border-radius:7px;" id="header">Start</h1>
+<h1 onclick="restart(); myTimer = setInterval(start, 1000);" style="background-color:lightgray; padding: 10px; border-radius:7px;" id="header">Start</h1>
 <body id="body" onclick="click1()">
 <br>
 <div onclick="click1()"> 
