--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en"  onclick="click1()">
+<head> 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,8 +15,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Quicksand&family=Ysabeau+SC:wght@200&display=swap" rel="stylesheet">
 </head>
-<!-- hi -->
-<h1 onclick="restart(); myTimer = setInterval(start, 1000);" style="background-color:lightgray; padding: 10px; border-radius:7px;" id="header">Start</h1>
+
+<h1 onclick="restart(); tester1 = 0, tester2 = 0;myTimer = setInterval(start, 1000);" style="background-color:lightgray; padding: 10px; border-radius:7px;" id="header">Start</h1>
 <body id="body" onclick="click1()">
 <br>
 <div onclick="click1()"> 
